# gonecycling-web

./: .dockerignore  .env.example  .gitguardian.yaml  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
.github/workflows/: ci.yml
accounts/: apps.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_accounts.py
config/: asgi.py  settings.py  urls.py  wsgi.py
deploy/: apache-gonecycling.conf  nginx-gonecycling.conf
deploy/host/: gonecycling-deploy.path  gonecycling-deploy.service  gonecycling-deploy.sh
docs/: deploy.md  self-update.md  sync-protocol.md  update.md
static/css/: app.css
sync/: apps.py  auth.py  models.py  security.py  serializers.py  throttling.py  urls.py  views.py
templates/: deploy.html  index.html
tests-js/: accounts.test.js  autoplan.test.js  backup.test.js  crypto_sync.test.js  elevation.test.js  gc-hooks.mjs  geocode.test.js  gpx.test.js  guided.test.js  i18n.test.js  i18n_source.test.js  i18n_template.test.js  i18n_toggle_dom.test.js  overpass.test.js  pairing.test.js  planner_detail.test.js  poi.test.js  poi_id_collision_dom.test.js  poi_settings_dom.test.js  rides.test.js  ridestats.test.js  ridetime.test.js  roundtrip.test.js  routing.test.js  search_recent_dom.test.js  setup.mjs  sun.test.js  trip_mode_indicator.test.js  trips.test.js
web/: admin.py  apps.py  context_processors.py  urls.py  views.py
(+39 files in other folders)
