[project]
name = "gonecycling-web"
version = "0.1.0"
description = "Anonymous, end-to-end-encrypted sync backend for the GoneCycling Companion web app"
requires-python = ">=3.12"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
# Sensible default rules: pyflakes, pycodestyle, isort, bugbear, comprehensions.
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]  # Line length is handled by the formatter.

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501"]
